added javascript test

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p class="p7"><span class="s1"></span><br></p>
 <h2 style="margin: 0.0px 0.0px 24.0px 0.0px; text-align: center; line-height: 28.0px; font: 24.0px Helvetica; color: #343434; -webkit-text-stroke: #343434; background-color: #fbfbfb"><span class="s1"><b>PROJECTS</b></span></h2>
 <h3 style="margin: 0.0px 0.0px 0.0px 0.0px; text-align: center; line-height: 21.0px; font: 18.0px Helvetica; color: #343434; -webkit-text-stroke: #343434; background-color: #fbfbfb"><span class="s1"><b>Project 1</b></span></h3>
-<p class="p10"></span></p>
+<p class="p10"><p>The time is <b><script>document.write(new Date().toLocaleTimeString());</script></b>.</p></span></p>
 <ul class="ul1">
   <li class="li11"><span class="s3"></span><span class="s1">SASS</span></li>
   <li class="li11"><span class="s3"></span><span class="s1">TypeScript</span></li>
