added line breaks

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <p class="p3"><span class="s1"></span><br></p>
 <h1 style="margin: 0.0px 0.0px 0.0px 0.0px; line-height: 37.0px; font: 31.2px Helvetica; color: #2163a6; -webkit-text-stroke: #2163a6; background-color: #fbfbfb"><span class="s2"><b>Hi, I am </b></span><span class="s1"><b>Ray Evans.</b></span></h1>
 <h2 style="margin: 0.0px 0.0px 0.0px 0.0px; line-height: 28.0px; font: 24.0px Helvetica; color: #343434; -webkit-text-stroke: #343434; background-color: #fbfbfb"><span class="s1"><b>A Computer Scientist.</b></span></h2>
-<p class="p2"><span class="s1">After receiving a bachelor's degree in Computer Science from the University of North Carolina at Charlotte, 
-	I went directly into my early career, working as an IT analyst for a large company. Within the same company, I transitioned into a role as an
+<p class="p2"><span class="s1">After receiving a bachelor's degree in Computer Science from the University of North Carolina at Charlotte, <br> 
+	I went directly into my early career, working as an IT analyst for a large company. Within the same company, I transitioned into a role as an <br>
 	IT Security Analyst and am currently pursuing a Master's degree in computer science.<span class="Apple-converted-space"> </span></span></p>
 <p class="p6"><span class="s1"><a href="https://docs.google.com/document/d/1JES4e_rDBq6zAy9SMj7MzpPl6dhdDkxCRA8pZHhWP3o/edit?usp=sharing">View my résumé</a></span></p>
 <p class="p7"><span class="s1"></span><br></p>
