cleaning up old text2

--- a/index.html
+++ b/index.html
@@ -59,23 +59,8 @@
   <li class="li11"><span class="s3"></span><span class="s1">React</span></li>
 </ul>
 <h2 style="margin: 0.0px 0.0px 24.0px 0.0px; text-align: center; line-height: 28.0px; font: 24.0px Helvetica; color: #343434; -webkit-text-stroke: #343434; background-color: #fbfbfb"><span class="s1"><b>SKILLS</b></span></h2>
-<ul class="ul1">
-  <li class="li12"><span class="s3"></span><span class="s1">HTML</span></li>
-  <li class="li12"><span class="s3"></span><span class="s1">CSS</span></li>
-  <li class="li12"><span class="s3"></span><span class="s1">SCSS</span></li>
-  <li class="li12"><span class="s3"></span><span class="s1">JavaScript</span></li>
-  <li class="li12"><span class="s3"></span><span class="s1">TypeScript</span></li>
-  <li class="li12"><span class="s3"></span><span class="s1">React</span></li>
-  <li class="li12"><span class="s3"></span><span class="s1">Redux</span></li>
-  <li class="li12"><span class="s3"></span><span class="s1">Git</span></li>
-  <li class="li12"><span class="s3"></span><span class="s1">Material UI</span></li>
-  <li class="li12"><span class="s3"></span><span class="s1">Jest</span></li>
-  <li class="li12"><span class="s3"></span><span class="s1">Enzyme</span></li>
-  <li class="li12"><span class="s3"></span><span class="s1">CI/CD</span></li>
-</ul>
 <h2 style="margin: 0.0px 0.0px 24.0px 0.0px; text-align: center; line-height: 28.0px; font: 24.0px Helvetica; color: #343434; -webkit-text-stroke: #343434; background-color: #fbfbfb"><span class="s1"><b>CONTACT</b></span></h2>
-<p class="p6"><span class="s1"><a href="mailto:rjshekhar.official@gmail.com">email me</a></span></p>
-<p class="p13"><span class="s1"><a href="https://github.com/rajshekhar26/cleanfolio-minimal"><b>Created By Raj Shekhar<span class="Apple-converted-space"> </span></b><span class="s4"><b></b></span></a></span></p>
+<p class="p6"><span class="s1"><a href="mailto:rayevans1384@gmail.com">email me</a></span></p>
 <p class="p14"><span class="s1"></span><br></p>
 </body>
 </html>
